@@ -1,0 +1,8 @@
+#ifndef	_SHORTBOX_H
+#define	_SHORTBOX_H
+
+/* $Id$ */
+
+char *shortboxname(faddr *);
+
+#endif
