@@ -6,6 +6,7 @@ v0.39.6		11-Jan-2004
 		New binkp/1.1 driver fixes for Sun NetBSD.
 		Removed TCP ignore check in EOB state.
 		Transmiter file close now right after last block.
+		Added support for T-Mail fileboxes.
 
 	mbsetup:
 		Reorganised menu 1.4 screen 1 and 2.
